--- a/html/contactos.html
+++ b/html/contactos.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/tiendaonline/css/styles.css">
     <meta name="description" content="venta de equipo de computo">
     <meta name="keywords" content="monitor, teclado, pc">
     <title>Contactos</title>
@@ -49,6 +49,11 @@
         <main class="contenedor sombra">
 
             <h2>informacion principal</h2>
+
+            nombre
+            contactos
+            correo
+            telefono
 
         </main>
 
